--- a/templates/haskell/example.cabal
+++ b/templates/haskell/example.cabal
@@ -1,35 +1,30 @@
-cabal-version:      3.0
-name:               example
-version:            0.1.0.0
--- synopsis:
--- description:
-license:            GPL-3.0-only
-license-file:       LICENSE
-author:             Leon Schumacher
-maintainer:         leonsch@protonmail.com
--- copyright:
-build-type:         Simple
--- extra-doc-files:
--- extra-source-files:
+cabal-version: 2.0
 
-common warnings
-    ghc-options: -Wall
+-- This file has been generated from package.yaml by hpack version 0.35.2.
+--
+-- see: https://github.com/sol/hpack
+
+name:               example
+version:            0.1.0
+license:            GPL-3
+license-file:       LICENSE
+build-type:         Simple
 
 executable example
-    import:           warnings
-    hs-source-dirs:   app
+    hs-source-dirs:
+        app
+    ghc-options: -Wall
     default-language: Haskell2010
-
-    main-is:          Main.hs
-    -- other-modules:
-    -- other-extensions:
-
+    main-is: Main.hs
+    other-modules:
+        Paths_example
+    autogen-modules:
+        Paths_example
     build-depends:
-      base,
-      relude,
-      flow,
-
+        base,
+        flow,
+        relude
     mixins:
-      base hiding (Prelude),
-      relude (Relude as Prelude),
-      relude,
+        base hiding (Prelude),
+        relude (Relude as Prelude),
+        relude 
