--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,9 +8,13 @@ jobs:
         uses: actions/checkout@v4
       - name: Install Nix
         uses: DeterminateSystems/nix-installer-action@main
-      - name: Install nixci
+      - name: Enable Nix caching
+        uses: DeterminateSystems/magic-nix-cache-action@main
+      - name: Install nixci and cachix
         uses: yaxitech/nix-install-pkgs-action@v3
         with:
-          packages: "nixpkgs#nixci"
+          packages: "nixpkgs#nixci, cachix"
       - name: Run nixci
-        run: nixci
+        env:
+          CACHIX_AUTH_TOKEN: ${{ secrets.CACHIX_AUTH_TOKEN }}
+        run: nixci | cachix push 42loco42
