C template: even better Makefile (with dependency management)

--- a/templates/c/Makefile
+++ b/templates/c/Makefile
@@ -9,6 +9,7 @@ CFLAGS  += $(shell pkg-config --cflags $(DEPS))
 LDFLAGS += $(shell pkg-config --libs   $(DEPS))
 
 SRCS := $(shell find -name '*.c')
+INCS := $(patsubst %.c,build/%.d,$(SRCS))
 OBJS := $(patsubst %.c,build/%.o,$(SRCS))
 DIRS := $(sort $(shell dirname $(OBJS)))
 
@@ -16,8 +17,10 @@ $(shell mkdir -p $(DIRS))
 
 all: $(NAME)
 
+-include $(INCS)
+
 build/%.o: %.c
-	$(CC) $(CFLAGS) -c $< -o $@
+	$(CC) $(CFLAGS) -c $< -MMD -o $@
 
 $(NAME): $(OBJS)
 	$(CC) $(LDFLAGS) $^ -o $@
