--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,6 @@ jobs:
       - name: Run nixci
         env:
           CACHIX_AUTH_TOKEN: ${{ secrets.CACHIX_AUTH_TOKEN }}
-        run: nixci | cachix push 42loco42
+        run: |
+          set -eo pipefail
+          nixci | cachix push 42loco42
