C template: Makefile: cleanup

--- a/templates/c/Makefile
+++ b/templates/c/Makefile
@@ -1,16 +1,21 @@
 NAME    := example
 DEPS    :=
-CFLAGS  := -Wall -Wextra -I glad/include
-LDFLAGS :=
+CFLAGS  := $(CFLAGS)  -Wall -Wextra -Werror -g
+LDFLAGS := $(LDFLAGS)
 
 ################################################################################
 
+ifdef DEPS
 CFLAGS  += $(shell pkg-config --cflags $(DEPS))
 LDFLAGS += $(shell pkg-config --libs   $(DEPS))
+endif
 
-SRCS := $(shell find -name '*.c')
-INCS := $(patsubst %.c,build/%.d,$(SRCS))
-OBJS := $(patsubst %.c,build/%.o,$(SRCS))
+SRCD := src
+BLDD := build
+
+SRCS := $(patsubst $(SRCD)/%,%,$(shell find $(SRCD) -name '*.c'))
+INCS := $(patsubst %.c,$(BLDD)/%.d,$(SRCS))
+OBJS := $(patsubst %.c,$(BLDD)/%.o,$(SRCS))
 DIRS := $(sort $(shell dirname $(OBJS)))
 
 $(shell mkdir -p $(DIRS))
@@ -19,7 +24,7 @@ all: $(NAME)
 
 -include $(INCS)
 
-build/%.o: %.c
+$(BLDD)/%.o: $(SRCD)/%.c
 	$(CC) $(CFLAGS) -c $< -MMD -o $@
 
 $(NAME): $(OBJS)
@@ -35,5 +40,5 @@ install: $(NAME)
 .PHONY: install
 
 clean:
-	rm -rf build $(NAME)
+	rm -rf $(BLDD) $(NAME)
 .PHONY: clean
