--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,7 @@ on:
   push:
     paths:
       - "packages/**"
+      - ".github/workflows/**"
 
 jobs:
   main:
@@ -11,17 +12,17 @@ jobs:
     steps:
       - name: Checkout the repo
         uses: actions/checkout@v4
+
       - name: Install Nix
-        uses: DeterminateSystems/nix-installer-action@main
-      - name: Enable Nix caching
-        uses: DeterminateSystems/magic-nix-cache-action@main
-      - name: Install nixci and cachix
-        uses: yaxitech/nix-install-pkgs-action@v3
+        uses: cachix/install-nix-action@v25
         with:
-          packages: "nixpkgs#nixci, cachix"
+          nix_path: nixpkgs=github:nixos/nixpkgs/e1fa12d4f6c6fe19ccb59cac54b5b3f25e160870
+
+      - name: Enable Cachix
+        uses: cachix/cachix-action@v14
+        with:
+          name: 42loco42
+          authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
+
       - name: Run nixci
-        env:
-          CACHIX_AUTH_TOKEN: ${{ secrets.CACHIX_AUTH_TOKEN }}
-        run: |
-          set -eo pipefail
-          nixci | cachix push 42loco42
+        run: nix run .#nixci
