--- a/.github/workflows/nix-github-actions.yml
+++ b/.github/workflows/nix-github-actions.yml
@@ -2,6 +2,8 @@ name: Nix Flake actions
 
 on:
   workflow_dispatch:
+  schedule:
+    - cron: "0 3 * * *"
 
 jobs:
   nix-matrix:
@@ -10,14 +12,29 @@ jobs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref }}
+
       - uses: DeterminateSystems/nix-installer-action@v12
-      - uses: DeterminateSystems/magic-nix-cache-action@v7
+
+      - name: Update nixpkgs
+        run: nix flake update nixpkgs
+
       - id: set-matrix
         name: Generate Nix Matrix
         run: |
           set -Eeu
           matrix="$(nix eval --json '.#githubActions.matrix')"
           echo "matrix=$matrix" >> "$GITHUB_OUTPUT"
+
+      - name: Commit flake update
+        uses: planetscale/ghcommit-action@v0.1.39
+        with:
+          commit_message: "🤖 Update nixpkgs"
+          repo: ${{ github.repository }}
+          branch: ${{ github.head_ref || github.ref_name }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   nix-build:
     needs: nix-matrix
@@ -28,6 +45,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: DeterminateSystems/nix-installer-action@v12
       - uses: DeterminateSystems/magic-nix-cache-action@v7
+
       - run: nix run .#ci -- "${{ matrix.attr }}"
         env:
           ATTIC_TOKEN: ${{ secrets.ATTIC_TOKEN }}
