--- a/.github/workflows/nix-github-actions.yml
+++ b/.github/workflows/nix-github-actions.yml
@@ -26,7 +26,7 @@ jobs:
         name: Generate Nix Matrix
         run: |
           set -Eeu
-          matrix="$(nix eval --json '.#githubActions.matrix')"
+          matrix="$(nix run .#matrix)"
           echo "matrix=$matrix" >> "$GITHUB_OUTPUT"
 
       - name: Commit flake update
@@ -48,6 +48,6 @@ jobs:
       - uses: DeterminateSystems/nix-installer-action@v12
       - uses: DeterminateSystems/magic-nix-cache-action@v7
 
-      - run: nix run .#ci -- "${{ matrix.attr }}"
+      - run: nix run .#build -- "${{ matrix.attr }}"
         env:
           ATTIC_TOKEN: ${{ secrets.ATTIC_TOKEN }}
