CI: only run nix-build when matrix isn't empty

--- a/.github/workflows/nix-github-actions.yml
+++ b/.github/workflows/nix-github-actions.yml
@@ -43,6 +43,7 @@ jobs:
 
   nix-build:
     needs: nix-matrix
+    if: ${{ needs.nix-matrix.outputs.matrix != '' }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix: ${{fromJSON(needs.nix-matrix.outputs.matrix)}}
