--- a/.github/workflows/nix-github-actions.yml
+++ b/.github/workflows/nix-github-actions.yml
@@ -1,4 +1,4 @@
-name: Nix Flake actions
+name: Build all outputs
 
 on:
   workflow_dispatch:
@@ -11,35 +11,17 @@ on:
 jobs:
   nix-matrix:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
       - uses: actions/checkout@v4
-        with:
-          ref: ${{ github.head_ref }}
-
       - uses: DeterminateSystems/nix-installer-action@v12
-
-      - name: Update nixpkgs
-        run: nix flake update nixpkgs
-
       - id: set-matrix
         name: Generate Nix Matrix
         run: |
           set -Eeu
           matrix="$(nix run .#matrix)"
           echo "matrix=$matrix" >> "$GITHUB_OUTPUT"
-
-      - name: Commit flake update
-        uses: planetscale/ghcommit-action@v0.1.39
-        with:
-          commit_message: "🤖 Update nixpkgs"
-          repo: ${{ github.repository }}
-          branch: ${{ github.head_ref || github.ref_name }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   nix-build:
     needs: nix-matrix
@@ -51,7 +33,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: DeterminateSystems/nix-installer-action@v12
       - uses: DeterminateSystems/magic-nix-cache-action@v7
-
       - run: nix run .#build -- "${{ matrix.attr }}"
         env:
           ATTIC_TOKEN: ${{ secrets.ATTIC_TOKEN }}
