--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,11 +2,12 @@ name: Build all outputs
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "0 3 * * *"
   push:
     paths:
       - "packages/**"
+  repository_dispatch:
+    types:
+      - trigger-build
 
 jobs:
   nix-matrix:
@@ -15,7 +16,9 @@ jobs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
       - uses: actions/checkout@v4
+
       - uses: DeterminateSystems/nix-installer-action@v12
+
       - id: set-matrix
         name: Generate Nix Matrix
         run: |
@@ -35,11 +38,18 @@ jobs:
       - uses: DeterminateSystems/nix-installer-action@v12
         with:
           extra-conf: |
-            substituters = https://cache.nixos.org https://nix-community.cachix.org https://attic.eleonora.gay/default
-            trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= nix-community.cachix.org-1:mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs= default:3FYh8sZV8gWa7Jc5jlP7gZFK7pt3kaHRiV70ySaQ42g=
+            substituters = https://cache.nixos.org https://nix-community.cachix.org
+            trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= nix-community.cachix.org-1:mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs=
 
       - uses: DeterminateSystems/magic-nix-cache-action@v7
 
-      - run: nix run .#build -- "${{ matrix.attr }}"
+      - name: Set up Attic cache
+        uses: ryanccn/attic-action@v0.2.1
+        with:
+          endpoint: https://attic.eleonora.gay
+          cache: default
+          token: ${{ secrets.ATTIC_TOKEN }}
+
+      - run: nix build -L "${{ matrix.attr }}"
         env:
           ATTIC_TOKEN: ${{ secrets.ATTIC_TOKEN }}
