README: add number of packages

--- a/README.md.in
+++ b/README.md.in
@@ -5,7 +5,7 @@ A personal collection of unusual things
   * substituter: `https://attic.eleonora.gay/default`
   * public key:  `default:3FYh8sZV8gWa7Jc5jlP7gZFK7pt3kaHRiV70ySaQ42g=`
 
-## Packages
+## @NUM@ Packages
 
 | Name | Description | Homepage |
 |------|-------------|----------|
