README: add version field

--- a/README.md.in
+++ b/README.md.in
@@ -7,5 +7,5 @@ A personal collection of unusual things
 
 ## @NUM@ Packages
 
-| Name | Description | Homepage |
-|------|-------------|----------|
+| Name | Version | Description | Homepage |
+|------|---------|-------------|----------|
