--- a/templates/python/pyproject.toml
+++ b/templates/python/pyproject.toml
@@ -1,7 +1,6 @@
 [project]
-name = "example"
+name = "examplepy"
 version = "0.1.0"
 description = "Add your description here"
-readme = "README.md"
 requires-python = ">=3.12"
 dependencies = []
