CI: try to fix locale weirdness

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,7 @@ jobs:
         run: |
           set -Eeu
           export XDG_CACHE_HOME="$HOME/.cache"
+          export LANG="en_US.UTF-8"
           matrix="$(nix run .#matrix)"
           echo "matrix=$matrix" >> "$GITHUB_OUTPUT"
 
