--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,16 +17,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: DeterminateSystems/nix-installer-action@v12
-
       - id: set-matrix
         name: Generate Nix Matrix
         run: |
-          set -Eeu
-          export XDG_CACHE_HOME="$HOME/.cache"
-          export LANG="en_US.UTF-8"
-          matrix="$(nix run .#matrix)"
-          echo "matrix=$matrix" >> "$GITHUB_OUTPUT"
+          ./ci-matrix.sh > "$GITHUB_OUTPUT"
 
   nix-build:
     needs: nix-matrix
