--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,24 +11,28 @@ on:
 
 jobs:
   nix-matrix:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
+
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
+
     steps:
       - uses: actions/checkout@v4
 
       - id: set-matrix
         name: Generate Nix Matrix
-        run: |
-          ./ci-matrix.sh > "$GITHUB_OUTPUT"
+        run: ./ci-matrix.sh > "$GITHUB_OUTPUT"
 
   nix-build:
     needs: nix-matrix
     if: ${{ needs.nix-matrix.outputs.matrix != '' }}
-    runs-on: ${{ matrix.os }}
+
     strategy:
       fail-fast: false
       matrix: ${{fromJSON(needs.nix-matrix.outputs.matrix)}}
+
+    runs-on: ${{ matrix.os }}
+
     steps:
       - uses: actions/checkout@v4
 
@@ -45,4 +49,4 @@ jobs:
           cache: default
           token: ${{ secrets.ATTIC_TOKEN }}
 
-      - run: nix build -L ".#${{ matrix.attr }}"
+      - run: nix build -L '.#packages.${{ matrix.arch }}.${{ matrix.name }}'
